Fixed SonarQube issues on MikkeliNyt tests